argocd/infrastructure/argocd-config/oauth2-proxy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  namespace: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: oauth2-proxy.cryptoviz.epitech-msc2026.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - oauth2-proxy.cryptoviz.epitech-msc2026.me
      secretName: oauth2-proxy-tls
